- Jumping input fix

--- a/src/components/LoginForm/Input/Input.scss
+++ b/src/components/LoginForm/Input/Input.scss
@@ -16,6 +16,7 @@
   .input-icon {
     margin-left: 25px;
     margin-right: 15px;
+    min-width: 14px;
   }
 
   .input-field {
